--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-user=desenvolvedor
-password=guimelo56
-dburl=jdbc:mysql://localhost:3306/cursojdbc
+user=root
+password=
+dburl=jdbc:mysql://localhost:3306/aulajdbc
 useSSL=false
